--- a/devs.html
+++ b/devs.html
@@ -54,7 +54,7 @@
                     <span class="tag is-owner">Owner</span>
                 </div>
                 <div class="column">
-                    <a href="https://thehydrogen.ml" rel="noopener noreferrer"><img style="width:150px;" class="staff owner" alt="Hayden" src="./img/ken.png"></a>
+                    <a href="https://thehydrogen.xyz" rel="noopener noreferrer"><img style="width:150px;" class="staff owner" alt="Hayden" src="./img/ken.png"></a>
                     <h3 style="font-size:20px;">Hydrogen (Ken)</h3>
                     <span class="tag is-owner">Owner</span>
                 </div>
